a bit of cleanup and improvements